<resources>
    <string name="app_name">teste</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="dont_t_have_an_account">Dont\'t have an account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="viagens">- Viagens -</string>
    <string name="hmmmm_goxtou_n">HMMMM Goxtou né</string>
    <string name="textview">TextView</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-Mail</string>
    <string name="sobre">Sobre Mim</string>
    <string name="ola_sou_zaher_tenho_19_anos_um_jovem_serelepe_sempre_buscando_ideias_diferentes_novas_funcionalidades_entre_outros_criatividade_um_forte_nunca_fui_muito_chegado_a_rotinas_ou_zona_de_conforto">Ola, sou Zaher, tenho 19 anos, um jovem serelepe, sempre buscando ideias diferentes, novas funcionalidades entre outros. Criatividade é um forte, nunca fui muito chegado a rotinas ou zonas de conforto.</string>
    <string name="seu_perfil">Seu Perfil</string>
    <string name="_25">25</string>
    <string name="_135">135</string>
    <string name="mais">+</string>
    <string name="are_interested">are interested</string>
    <string name="preencha_campos">Preencha Todos os campos</string>
    <string name= "email_invalido">Email invalido!!</string>
    <string name="a_senha_deve_conter_no_minimo_8_caracteres">A senha deve conter no minimo 8 caracteres!!</string>
    <string name="senhas_diferentes">Senhas diferentes!!</string>
    <string name="cadastro_realizado_com_sucesso">Cadastro realizado com sucesso!</string>
    <string name="eMail_ja_utilizado">E-Mail ja utilizado</string>
    <string name="falha_no_cadastro">Falha no cadastro!</string>
    <string name="ATENCAO">ATENÇÃO</string>
    <string name="voce_nao_possui_cadastro_deseja_cadastrar">Voce nao possui cadastro, deseja cadastrar?</string>
    <string name="Sim">Sim</string>
    <string name="Nao">Não</string>
    <string name="acesso_Bloqueado">Acesso Bloqueado</string>
    <string name="falha_ao_carregar_as_imagens">Falha ao carregar as imagens</string>
    <string name="favorito_cadastrado_com_sucesso">Favorito cadastrado com sucesso!</string>
</resources>