<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create"
    tools:context=".MainActivity">

    <!-- label crate -->


    <!-- name -->

    <!-- email -->

    <TextView
        android:id="@+id/tv_ca"
        android:layout_width="192dp"
        android:layout_height="119dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="169dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:counterTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ca"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_name"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:maxLength="40"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:counterTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:maxLength="40"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:counterTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="password_toggle"
        app:helperText="Required* \n* Min 8 Caracteres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pass"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:inputType="textPassword"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- confirm password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:counterTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="password_toggle"
        app:helperText="Required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_pass"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_cpass"
            android:backgroundTint="@color/orange"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:inputType="textPassword"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- button -->


    <!-- footer -->

    <Button
        android:id="@+id/btn_sin"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_cpass" />

    <TextView
        android:id="@+id/tv_dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/tv_dont" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="345dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />


</androidx.constraintlayout.widget.ConstraintLayout>