<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/eventCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"

        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="395dp"
                    android:layout_height="230dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@color/black"/>

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/ivBtnFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/heart_clicked"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"/>


                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="5dp">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_gravity="bottom"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView

                                android:id="@+id/day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_25"
                                android:textAlignment="center"
                                android:textColor="@color/textBlue"
                                android:textSize="25sp"
                                android:textStyle="bold">

                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2.5"
                            android:background="@color/lightBlue"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/month"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="APR"
                                android:textAlignment="center"
                                android:textColor="@color/textBlue"
                                android:textSize="13sp" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/deepBlue"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:gravity="end|center"
                android:orientation="horizontal"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/count_background"
                    android:orientation="vertical"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >

                        <TextView
                            android:id="@+id/plus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/mais"

                            android:textAlignment="center"
                            android:textColor="@color/textBlue"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/_135"
                            android:textAlignment="center"
                            android:textColor="@color/textBlue"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:text="@string/are_interested"
                    android:textColor="@android:color/darker_gray">

                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>